# tamuno-sqlgen

./: .gitignore  README.md
Java/sqlgen/: install.bat  pom.xml
Java/sqlgen-maven-plugin/: install.sh  pom.xml
Java/sqlgen-maven-plugin/src/main/java/org/tamuno/sqlgen/maven/: SQLCodeGeneratorMojo.java
Java/sqlgen/src/main/java/org/tamuno/annotations/: Generated.java
Java/sqlgen/src/main/java/org/tamuno/ant/: TamunoSQLCodeGeneratorTask.java  package.html
Java/sqlgen/src/main/java/org/tamuno/runtime/sql/: BaseSQLApi.java  BaseSQLExecutor.java  DBConnectionProvider.java  GenericSQLDialectUtil.java  ISQLDialectUtil.java  RowIterator.java  ThreadDBConnectionProvider.java  TypedRow.java
Java/sqlgen/src/main/java/org/tamuno/sqlgen/: SQLCodeGenerator.java  SQLGenExpression.java  SQLGenParseException.java  SQLGenToken.java  SQLGenTokenType.java  SqlGenScanner.java
Java/sqlgen/src/main/java/org/tamuno/sqlgen/automate/: AutomaticGenerators.java  ColumnInfo.java  CrudsCGen.java  DeleteRowCGen.java  ListRowsCGen.java  (+4 more)
Java/sqlgen/src/main/java/org/tamuno/util/: ArrayMapSortable.java  ISortable.java  LinkedChar.java  LinkedString.java  Sorter.java  TamunoUtils.java
Java/sqlgen/src/test/java/org/tamuno/sqlgen/: SQLCodeGeneratorTest.java
Python/: README.md  pyproject.toml  tamuno_sqlgen_tutorial.ipynb
Python/tamuno_sqlgen/: __init__.py  api.py  builder.py  codegen.py  dialect.py  parser.py  scanner.py  types.py
Python/tests/: conftest.py  test_api.py  test_builder.py  test_codegen.py  test_parser.py  test_scanner.py
Python/tests/fixtures/: complex.sqlg  sample.sqlg
(+2 files in other folders)
