[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tamuno-sqlgen"
version = "0.1.0"
description = "Python port of the tamuno-sqlgen SQL template engine"
requires-python = ">=3.10"
dependencies = ["pandas>=1.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
